examples/pos/toplevelval.effekt
module toplevelval

val x = 1 + 2

def main() = println(x)