examples/neg/paramsnotypes.effekt
def identity(x) = x

def main() = ()
